1. 商家注册和获取附近商家